--- a/themes/esmyy/source/css/paginator.styl
+++ b/themes/esmyy/source/css/paginator.styl
@@ -3,7 +3,6 @@
   justify-content center
   align-items center
   margin-top: 20px;
-  //margin-left: -20px;
   .space,
   .prev,
   .next,
@@ -12,7 +11,7 @@
     height 30px
     border-radius 8px
     text-align center
-    border 1px solid gray
+    border 1px solid #b3dcf5
     display flex
     align-items center
     justify-content center
@@ -20,7 +19,7 @@
     color black
     position: relative;
     &.current
-      background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+      background-color: #b3dcf5;
   .prev
     &::after
       content "<"
