--- a/themes/esmyy/source/css/first-screen.styl
+++ b/themes/esmyy/source/css/first-screen.styl
@@ -3,7 +3,7 @@
   width: 100vw
   height: 100vh
   background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
-  // background-image: url('https://cdn.pixabay.com/photo/2022/10/28/18/12/lake-7553642_960_720.jpg')
+  background-position-y: bottom;
   background-size: cover
   &.hidden
     display: none;
