--- a/themes/esmyy/source/css/article.styl
+++ b/themes/esmyy/source/css/article.styl
@@ -16,8 +16,7 @@
   .qrImgWrapper
     margin-top 20px
     img
-      width: 300px
-.base-style
+      max-width: 300px
   h1, h2, h3, h4, h5, h6
     margin: 2rem 0 1rem 0;
   hr
@@ -53,8 +52,11 @@
   ul
     list-style-type circle
 
-  p, table, blockquote
-    margin 1.5rem 0
+  p,
+  table,
+  blockquote
+    margin 1rem 0
+
   h1 +p,
   h2 +p,
   h3 +p,
