--- a/themes/esmyy/source/css/homepage.styl
+++ b/themes/esmyy/source/css/homepage.styl
@@ -34,6 +34,7 @@
       .picture
         background-size: cover
         height: 120px
+        background-position: center
     &.talkCard
       background-color #b3dcf5
       border none
