--- a/themes/esmyy/source/css/first-screen.styl
+++ b/themes/esmyy/source/css/first-screen.styl
@@ -29,3 +29,7 @@
     position absolute
     bottom: 20px
     right: 20px
+    line-height: 30px
+    p
+      display: flex
+      align-items: center
