--- a/themes/esmyy/layout/_partial/sidebar.ejs
+++ b/themes/esmyy/layout/_partial/sidebar.ejs
@@ -7,7 +7,7 @@
         <h1 class="name">马月月</h1>
         <div class="alias">esmyy</div>
     </div>
-    <div class="summary-box">
+    <div class="excerpt-box">
         <div class="posts">
             <iconpark-icon name="document-folder"></iconpark-icon>
             <span>23 posts</span>
