--- a/themes/esmyy/source/css/partial.styl
+++ b/themes/esmyy/source/css/partial.styl
@@ -23,7 +23,7 @@
       .title
         cursor: pointer;
         color --color-primary
-    .summary
+    .excerpt
       font-size --text-small
       height 64px
       line-height 22px
