--- a/themes/esmyy/source/css/sidebar.styl
+++ b/themes/esmyy/source/css/sidebar.styl
@@ -29,7 +29,7 @@
     .alias
       font-size 20px
       color #57606a;
-  .summary-box
+  .excerpt-box
     display flex
     margin: 10px 0;
     align-items center
