--- a/themes/esmyy/layout/_partial/timeline.ejs
+++ b/themes/esmyy/layout/_partial/timeline.ejs
@@ -17,12 +17,12 @@ var year = new Date().getFullYear() + 1 + ''
       <a href="<%= url_for(post.path) %>" class="title">
         <%= post.title %>
       </a>
-      <div class="summary">
-        <%= post.excerpt || post.content.replace(/<[^>]*>/ig, ' ').slice(0, 160) %>...
+      <div class="excerpt ellipse">
+        <%= get_excerpt(post) %>...
       </div>
 
       <%
-      var poster = get_first_img(post)
+      var poster = get_poster(post)
       %>
       <% if (poster) { %>
       <img class="poster" src="<%= poster %>" />
