--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -102,12 +102,20 @@ code
 .mt-32
   margin-top 32px
 
-.overflowEllipse
+.ellipsis
   position: relative;
-  &::after
-    content: "...";
-    position: absolute;
-    right: 2px;
-    bottom: 0px;
-    background-color: transparent;
-    width: 19px;
+  overflow : hidden;
+  text-overflow: ellipsis;
+  word-break: break-all;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+.ellipse2
+  @extend .ellipsis;
+  -webkit-line-clamp: 2;
+.ellipse3
+  @extend .ellipsis;
+  -webkit-line-clamp: 3;
+.ellipse4
+  @extend .ellipsis;
+  -webkit-line-clamp: 4;
