--- a/themes/esmyy/source/css/timeline.styl
+++ b/themes/esmyy/source/css/timeline.styl
@@ -13,7 +13,7 @@
       font-size: larger
     .title
       font-weight: bold
-    .summary
+    .excerpt
       margin-top 4px
     &::before
       position: absolute;
