--- a/themes/esmyy/source/css/main.styl
+++ b/themes/esmyy/source/css/main.styl
@@ -2,7 +2,7 @@
 @import "./reset"
 @import "./base"
 @import "./sidebar"
-@import "partial.styl"
+@import "./article-card.styl"
 @import "./navbar"
 @import "./header"
 @import "./post"
