--- a/themes/esmyy/layout/_partial/header.ejs
+++ b/themes/esmyy/layout/_partial/header.ejs
@@ -7,12 +7,9 @@ var archivesActive = /archives/.test(pathname)
 var tagActive = /tags/.test(pathname)
 var categoriesActicve = /categories\/$/.test(pathname)
 var homeActive = /^(\/?index.html)?$/.test(pathname)
-var hasPicture = site.categories.some(function(ca){
-  return ca.name === "picture";
-})
-var hasReading = site.categories.some(function(ca){
-  return ca.name === "reading";
-})
+var lastPhoto = get_last_of(site, 'photo')
+var lastReading = get_last_of(site, 'reading')
+var lastTalk = get_last_of(site, 'talk')
 %>
 <header>
   <div class="mainContent headerContent">
@@ -23,34 +20,36 @@ var hasReading = site.categories.some(function(ca){
           <span>首页</span>
         </a>
       </li>
-     <li class="<%= talkActive ? 'selected' : '' %>">
+      <% if (lastTalk) {%>
+      <li class="<%= talkActive ? 'selected' : '' %>">
         <a href="/categories/talk">
           <iconpark-icon name="message-emoji"></iconpark-icon>
-          <span>随笔</span>
+          <span>说说</span>
         </a>
       </li>
-      <% if (hasPicture) {%>
-        <li class="<%= photosActive ? 'selected' : '' %>">
-          <a href="/categories/photos">
-            <iconpark-icon name="camera"></iconpark-icon>
-            <span>照片</span>
-          </a>
-        </li>
       <%}%>
-      <% if (hasReading) {%>
-        <li class="<%= readingActive ? 'selected' : '' %>">
-          <a href="/categories/reading">
-            <iconpark-icon name="read-book"></iconpark-icon>
-            <span>阅读</span>
-          </a>
-        </li>
+      <% if (lastPhoto) {%>
+      <li class="<%= photosActive ? 'selected' : '' %>">
+        <a href="/categories/photos">
+          <iconpark-icon name="camera"></iconpark-icon>
+          <span>照片</span>
+        </a>
+      </li>
+      <%}%>
+      <% if (lastReading) {%>
+      <li class="<%= readingActive ? 'selected' : '' %>">
+        <a href="/categories/reading">
+          <iconpark-icon name="read-book"></iconpark-icon>
+          <span>阅读</span>
+        </a>
+      </li>
       <%}%>
 
       <li class="<%= tagActive ? 'selected' : '' %>">
-        <a href="/tags">
-          <iconpark-icon name="tag-one"></iconpark-icon>
-          <span>标签</span>
-        </a>
+      <a href="/tags">
+        <iconpark-icon name="tag-one"></iconpark-icon>
+        <span>标签</span>
+      </a>
       </li>
       <li class="<%= categoriesActicve ? 'selected' : '' %>">
         <a href="/categories">
@@ -65,9 +64,6 @@ var hasReading = site.categories.some(function(ca){
         </a>
       </li>
     </ul>
-    <% if (hasPicture) { %>
-      <div>yes</div>
-    <%}%>
   </div>
   <a class="avatar-box" href="https://github.com/esmyy">
     <img class="avatar" src="https://avatars.githubusercontent.com/u/20430185?v=4" alt="马月月头像" />
