--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -44,7 +44,7 @@ code
 
 .card
   height 120px
-  padding 14px 16px
+  padding 16px 14px 16px 16px
   border 1px solid --border-color
   border-radius 6px
 
@@ -81,6 +81,8 @@ code
 .pr-4
   padding-right: 4px
 
+.pt-2
+  padding-top 2px
 
 // mt
 .mt-2
@@ -102,6 +104,8 @@ code
 .mt-32
   margin-top 32px
 
+.verticalAlignTextTop
+  vertical-align: text-top;
 .ellipsis
   position: relative;
   overflow : hidden;
