--- a/themes/esmyy/layout/_partial/article-card.ejs
+++ b/themes/esmyy/layout/_partial/article-card.ejs
@@ -5,7 +5,7 @@ let poster = get_poster(post)
 %>
 <div class="card articleCard">
     <% if (poster) { %>
-        <img class="picture" src="<%= poster %>"/>
+        <img class="picture" src="<%= img_url(poster, env.env === 'production') %>"/>
     <% } %>
     <div class="articleDetail">
         <div>
