--- a/themes/esmyy/layout/_partial/head.ejs
+++ b/themes/esmyy/layout/_partial/head.ejs
@@ -1,8 +1,3 @@
-<%
-var tags = page.tags ? page.tags.data : '';
-var favicon = config.favicon
-%>
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -12,21 +7,14 @@ var favicon = config.favicon
     <%= (page.title || config.title) + (page.title ? ' | ' + config.title : '') %>
   </title>
   <meta name="description" content="<%= config.description %>">
-  <%
-  if(tags){ %>
-  <meta name="keywords" content="
-  <%= tags.map(function(tag) {
-    return tag.name
-  }).join(',') %>
-  ">
-  <% } %>
+  <meta name="keywords" content="esmyy, 马月月, 月月, 冯朋, esmyy的博客, 马月月的博客, 马月月的个人网站">
   <meta name="author" content="<%= config.author %>">
   <meta name="theme-color" content="#1e2327">
-  <link rel="icon" type="image/png" href="<%= favicon %>">
+  <link rel="icon" type="image/png" href="<%= img_url(config.favicon, env.env === 'production') %>">
   <script src="https://lf1-cdn-tos.bytegoofy.com/obj/iconpark/icons_20170_48.bf9b1349f8e5113e1be0df1991572168.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.1/viewer.min.js" integrity="sha512-UzpQxIWgLbHvbVd4+8fcRWqFLi1pQ6qO6yXm+Hiig76VhnhW/gvfvnacdPanleB2ak+VwiI5BUqrPovGDPsKWQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.1/viewer.min.css" integrity="sha512-XHhuZDcgyu28Fsd75blrhZKbqqWCXaUCOuy2McB4doeSDu34BgydakOK71TH/QEhr0nhiieBNhF8yWS8thOGUg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="<%- url_for(theme_css('css/main', env.env != 'development')) %>">
+  <link rel="stylesheet" href="<%- url_for('css/main.css') %>">
 </head>
