--- a/themes/esmyy/layout/_partial/header.ejs
+++ b/themes/esmyy/layout/_partial/header.ejs
@@ -66,7 +66,7 @@ var lastTalk = get_last_of(site, 'talk')
     </ul>
   </div>
   <a class="avatar-box" href="https://github.com/esmyy">
-    <img class="avatar" src="<%= img_url(config.avatar, env.env === 'production') %>" alt="马月月头像" />
+    <img class="avatar" src="<%= img_url(config.avatar, env.env === 'production') %>" alt="头像" />
     <div class="status-box"></div>
   </a>
 </header>
