--- a/themes/esmyy/source/css/article-card.styl
+++ b/themes/esmyy/source/css/article-card.styl
@@ -1,5 +1,5 @@
 .articleCard
-  min-width 320px
+  min-width 280px
   height 150px
   display flex
   position: relative;
@@ -37,3 +37,7 @@
             color --default-color
         .date-box
           float right
+
+@media screen and (max-width: 1000px)
+  .articleCardTags
+    display: none !important
