--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -21,15 +21,12 @@ header
 
 main
   min-height 100vh
-  width 1120px
-  margin 0 auto
 
 footer
   border-top 1px solid --border-color
   margin-top 80px
   padding 16px 0
   padding-bottom: 30px;
-
 
 a
   cursor: pointer;
@@ -38,9 +35,12 @@ a
 code
   border-radius: 4px;
 
+main,
 .mainContent
-  width 1120px
+  width 1160px
   margin 0 auto
+  max-width: 100%
+  padding: 0 20px
 
 .card
   height 120px
