--- a/themes/esmyy/source/css/homepage.styl
+++ b/themes/esmyy/source/css/homepage.styl
@@ -1,43 +1,25 @@
 .recentList
-  display grid
-  grid-template-columns: repeat(2, 50%)
-  grid-column-gap: 20px
-  grid-row-gap: 20px
-  .recentLeft
+  border-radius 6px
+  .recentLeft,
+  .recentRight
     display flex
     justify-content space-between
+    width: calc(50% - 10px)
+    min-width: 280px
+    > div
+      margin-top 16px
   .recentCard
     position relative
-    margin-right: 0;
-    margin-top: 20px;
     height 120px
     line-height: 22px;
     &.lifeCard
       display flex
       flex-direction column
       justify-content space-between
-    &.readingCard
-      flex-grow 1
-      margin-left: 12px
-      background-color #ede0d9
-      border none
-      .cardTitle
-        display: flex
-        align-items: center
-      .readingCardContent
-        position: relative;
-        overflow: hidden;
-    &.recentPictureSlider
-      flex-grow: 1
-      overflow: hidden;
-      border-radius 6px
-      .picture
-        background-size: cover
-        height: 120px
-        background-position: center
     &.talkCard
       background-color #b3dcf5
       border none
+      min-width: 120px
       .speaker
         position absolute
         left: 16px
@@ -45,15 +27,46 @@
       .talkCardContent
         position: relative;
         overflow: hidden;
-        max-width: 160px
-  .recentRight
-    display flex
-    justify-content space-between
-
+    &.readingCard
+      background-color #ede0d9
+      border none
+      margin-left 12px;
+      flex-grow: 1;
+      .cardTitle
+        display: flex
+        align-items: center
+      .readingCardContent
+        position: relative;
+        overflow: hidden;
+    &.recentPictureSlider
+      flex-grow: 1;
+      overflow: hidden;
+      border-radius 6px
+      .picture
+        background-size: cover
+        height: 120px
+        background-position: center
+.recentList,
 .articleList
-  margin-top: 20px;
-  display grid
-  grid-template-columns: repeat(2, 50%)
-  grid-column-gap: 20px
-  grid-row-gap: 20px
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  > div
+    width: calc(50% - 10px)
+.articleList
+  > div
+    margin-top 16px
 
+
+@media screen and (max-width: 681px)
+  .recentList,
+  .articleList
+    > div
+      width: 100% !important;
+
+@media screen and (max-width: 415px)
+  .recentLeft
+    display: block !important;
+    > div
+      width: 100% !important;
+      margin-left: 0 !important;
