--- a/themes/esmyy/source/css/scrolldown.css
+++ b/themes/esmyy/source/css/scrolldown.css
@@ -35,3 +35,9 @@
     filter: alpha(opacity=20);
   }
 }
+
+@media screen and (max-width: 768px) {
+  .scrollDownWrapper {
+    display: none;
+  }
+}
