--- a/themes/esmyy/source/css/calendar.styl
+++ b/themes/esmyy/source/css/calendar.styl
@@ -1,36 +1,37 @@
-.calendar-wrapper
+.calendarWrapper
   margin-top: 20px;
+  max-width: 100%;
   .excerpt
     font-size 16px
     font-weight 400
   .contribution-box
     display inline-block
     padding 8px
-.ContributionCalendar-day
+.calendarDay
   shape-rendering: geometricPrecision;
   outline-offset: -1px;
 
-.ContributionCalendar-day[data-level="0"]
+.calendarDay[data-level="0"]
   fill  --color-calendar-graph-day-bg
   outline 1px solid --color-calendar-graph-day-border
 
-.ContributionCalendar-day[data-level="1"]
+.calendarDay[data-level="1"]
   fill  --color-calendar-graph-day-L1-bg
   outline 1px solid --color-calendar-graph-day-L1-border
 
-.ContributionCalendar-day[data-level="2"]
+.calendarDay[data-level="2"]
   fill  --color-calendar-graph-day-L2-bg
   outline 1px solid --color-calendar-graph-day-L2-border
 
-.ContributionCalendar-day[data-level="3"]
+.calendarDay[data-level="3"]
   fill  --color-calendar-graph-day-L3-bg
   outline 1px solid --color-calendar-graph-day-L3-border
 
-.ContributionCalendar-day[data-level="4"]
+.calendarDay[data-level="4"]
   fill  --color-calendar-graph-day-L4-bg
   outline 1px solid --color-calendar-graph-day-L4-border
 
-.ContributionCalendar-label
+.calendarLabel
   font-size: 12px;
   fill: --default-color
 .level-box
@@ -42,3 +43,7 @@
     padding-right: 4px;
   svg
     margin-right: 4px;
+
+@media screen and (max-width: 768px)
+  .calendarWrapper
+    display: none;
