--- a/themes/esmyy/source/css/tags.styl
+++ b/themes/esmyy/source/css/tags.styl
@@ -7,6 +7,7 @@
     flex-wrap: wrap;
     border-radius: 6px
     padding: 30px
+    max-width: 100%
     a
       margin-right: 20px
       padding: 8px 16px;
