--- a/themes/esmyy/layout/_partial/header.ejs
+++ b/themes/esmyy/layout/_partial/header.ejs
@@ -5,7 +5,7 @@ var talkActive = /categories\/talk/.test(pathname)
 var readingActive = /categories\/reading/.test(pathname)
 var archivesActive = /archives/.test(pathname)
 var tagActive = /tags/.test(pathname)
-var categoriesActicve = /categories\/$/.test(pathname)
+var categoriesActicve = /categories/.test(pathname)
 var homeActive = /^(\/?index.html)?$/.test(pathname)
 var lastPhoto = get_last_of(site, 'photo')
 var lastReading = get_last_of(site, 'reading')
