--- a/themes/esmyy/source/css/tags.styl
+++ b/themes/esmyy/source/css/tags.styl
@@ -9,10 +9,8 @@
     padding: 30px
     max-width: 100%
     a
-      margin-right: 20px
-      padding: 8px 16px;
+      padding: 8px
       color: --default-color
       &:hover
         color: --color-primary;
         content: ")"
-
