--- a/themes/esmyy/source/css/base.styl
+++ b/themes/esmyy/source/css/base.styl
@@ -69,6 +69,8 @@ main,
 .pt-2
   padding-top 2px
 
+.pb-32
+  padding-bottom: 32px
 // mt
 .mt-2
   margin-top  2px
@@ -88,6 +90,7 @@ main,
   margin-top 24px
 .mt-32
   margin-top 32px
+
 
 .verticalAlignTextTop
   vertical-align: text-top;
